feat: ajusta conexao PostgreSQL via Docker e rotas de usuario