@@ -1,9 +1,9 @@
-package com.raizes.nordeste.pedidos.presentation;
+package com.raizes.nordeste.pedidos.infrastructure.exception;
 
+import com.raizes.nordeste.pedidos.presentation.ApiErrorResponse;
 import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.http.converter.HttpMessageNotReadableException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
@@ -11,52 +11,40 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 import java.time.Instant;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
 
-    @ExceptionHandler(HttpMessageNotReadableException.class)
-    public ResponseEntity<ApiErrorResponse> handleEnumError(HttpMessageNotReadableException ex, HttpServletRequest request) {
-        ApiErrorResponse error = ApiErrorResponse.builder()
-                .error("VALOR_INVALIDO")
-                .message("Corpo da requisição inválido ou valor de Enum não suportado.")
-                .details(List.of(new ApiErrorResponse.FieldErrorDetail("canal", "Os valores aceitos para o canal são: APP, TOTEM, BALCAO, PICKUP, WEB.")))
-                .timestamp(Instant.now())
-                .path(request.getRequestURI())
-                .requestId(UUID.randomUUID().toString())
-                .build();
-
-        return ResponseEntity.status(HttpStatus.UNPROCESSABLE_ENTITY).body(error);
-    }
-
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<ApiErrorResponse> handleValidationError(MethodArgumentNotValidException ex, HttpServletRequest request) {
+    public ResponseEntity<ApiErrorResponse> handleValidation(MethodArgumentNotValidException ex, HttpServletRequest request) {
         List<ApiErrorResponse.FieldErrorDetail> details = ex.getBindingResult().getFieldErrors().stream()
-                .map(err -> new ApiErrorResponse.FieldErrorDetail(err.getField(), err.getDefaultMessage()))
-                .toList();
+            .map(error -> new ApiErrorResponse.FieldErrorDetail(error.getField(), error.getDefaultMessage()))
+            .collect(Collectors.toList());
 
-        ApiErrorResponse error = ApiErrorResponse.builder()
-                .error("ERRO_VALIDACAO")
-                .message("Erro de validação nos campos da requisição.")
-                .details(details)
-                .timestamp(Instant.now())
-                .path(request.getRequestURI())
-                .requestId(UUID.randomUUID().toString())
-                .build();
+        ApiErrorResponse response = new ApiErrorResponse(
+            "VALIDATION_ERROR",
+            "Erro de validação nos campos da requisição",
+            details,
+            Instant.now(),
+            request.getRequestURI(),
+            UUID.randomUUID().toString()
+        );
 
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(response);
     }
 
     @ExceptionHandler(Exception.class)
-    public ResponseEntity<ApiErrorResponse> handleGenericError(Exception ex, HttpServletRequest request) {
-        ApiErrorResponse error = ApiErrorResponse.builder()
-                .error("ERRO_INTERNO")
-                .message(ex.getMessage())
-                .timestamp(Instant.now())
-                .path(request.getRequestURI())
-                .requestId(UUID.randomUUID().toString())
-                .build();
+    public ResponseEntity<ApiErrorResponse> handleGeneral(Exception ex, HttpServletRequest request) {
+        ApiErrorResponse response = new ApiErrorResponse(
+            "ERRO_INTERNO",
+            ex.getMessage(),
+            null,
+            Instant.now(),
+            request.getRequestURI(),
+            UUID.randomUUID().toString()
+        );
 
-        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(error);
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(response);
     }
 }
